Fix buggy behavior when changing relationship with viewbox displayed !! There are still some bugs, but it is better. Summary: 1. enable scrolling of text area to respond to changes in covered elements when viewbox displayed         a. disable autoscroll when of nbx text when viewbox visible 2. rename resources/relation-validation-functions.js to resources/relation-filter-functions.js 3. Make viewboxResizeObserver global (for now) to be able to disconnect it when viewbox is hidden 4. change rebuildDisplayedGraph() to fix bugs when changing relationships with viewbox displayed         a. decoupled editedGraph and displayedGraph. Always keep them separate!         b. added and changed some functions to handle the stuff 5. extracted toggling viewbox on and off into functions 6. hide scissors when all relationsips displayed

--- a/resources/page-style.css
+++ b/resources/page-style.css
@@ -55,18 +55,21 @@ text {
 #file-io {
   display: flex;
   flex-direction: row;
-  width: 30%;
+  width: 32%;
 }
 
 #file-intake {
-  width: 80%;
+  width: 85%;
   text-align: left;
+  align-self: center;
+}
+#file-intake-button {
+  width: 100%;
   font-size: 16px;
-  padding: 5px 5px;
 }
 
 #export {
-  width: 20%;
+  width: 15%;
   background-color: rgb(243, 243, 243);
   border: none;
   margin: 10px;
@@ -91,11 +94,11 @@ text {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  width: 60%;
+  width: 70%;
 }
 
 #toggle-viewbox {
-  width: 15%;
+  width: 175px;
   background-color: rgb(243, 243, 243);
   border: none;
   margin: 10px;
@@ -103,6 +106,7 @@ text {
   padding: 5px 5px;
   text-align: center;
   font-size: 16px;
+  display: none;
 }
 
 #toggle-viewbox:hover {
@@ -111,7 +115,7 @@ text {
 }
 
 #toggle-same-as {
-  width: 15%;
+  width: 175px;
   background-color: rgb(243, 243, 243);
   border: none;
   margin: 10px;
@@ -128,7 +132,7 @@ text {
 }
 
 #scissors {
-  width: 15%;
+  width: 175px;
   background-color: #f3f3f3;
   border: none;
   margin: 10px;
@@ -136,6 +140,7 @@ text {
   padding: 5px 5px;
   text-align: center;
   font-size: 16px;
+  display: none;
 }
 
 #scissors:hover {
@@ -144,7 +149,7 @@ text {
 }
 
 #reload-displayedGraph {
-  width: 15%;
+  width: 175px;
   background-color: #f3f3f3;
   border: none;
   margin-top: 10px;
@@ -196,7 +201,7 @@ text {
   height: 97%;
   overflow-y: scroll;
   font-size: 18px;
-  margin-top: 26px;
+  padding-top: 26px;
 }
 
 #text-viewbox {
